@@ -1,3 +1,9 @@
+2023-03-27  Di Chen  <dichen@redhat.com>
+
+	* readelf.c (options): Support dynamic symtab print with '-Ds'.
+	(process_symtab): New function.
+	(handle_dynamic_symtab): Likewise.
+
 2023-03-03  Mark Wielaard  <mark@klomp.org>
 
 	* readelf (process_elf_file): ebl_closebackend only after
